<?xml version="1.0"?>
<package format="2">
  <name>oculus_sonar_ros</name>
  <version>0.0.1</version>
  <description>ROS Package to interface with a Blueprint Subsea Oculus imaging sonar</description>

  <maintainer email="amarburg@uw.edu">A. Marburg</maintainer>
  <license>MIT
  </license>

  <!-- ROS build reqs -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>roscpp</exec_depend>

  <depend>acoustic_msgs</depend>
  <depend>active_object</depend>
  <depend>cv_bridge</depend>
  <depend>draw_sonar</depend>
  <depend>g3log_catkin</depend>
  <depend>image_transport</depend>
  <depend>liboculus</depend>
  <depend>nodelet</depend>
  <depend>nodelet_topic_tools</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
